--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,3 +1,501 @@
+@article{mortensen2016high,
+  title={High performance Python for direct numerical simulations of turbulent flows},
+  author={Mortensen, Mikael and Langtangen, Hans Petter},
+  journal={Computer Physics Communications},
+  volume={203},
+  pages={53--65},
+  year={2016},
+  month = 2,
+  publisher={Elsevier}
+}
+
+@article{chen2016f,
+  title={F region ionosphere effects on the mapping accuracy of SuperDARN HF radar echoes},
+  author={Chen, X-C and Lorentzen, DA and Moen, JI and Oksavik, Kjellmar and Baddeley, LJ and Lester, Mark},
+  journal={Radio Science},
+  volume={51},
+  number={5},
+  pages={490--506},
+  year={2016},
+  month = 5,
+  publisher={AGU}
+}
+
+@article{fernandes2016measuring,
+  title={Measuring the seeds of ion outflow: Auroral sounding rocket observations of low-altitude ion heating and circulation},
+  author={Fernandes, Philip A and Lynch, Kristina A and Zettergren, Matthew and Hampton, Donald L and Bekkeng, Tore A and Cohen, Ian J and Conde, Mark and Fisher, Lisa E and Horak, Peter and Lessard, Marc R and others},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={2},
+  pages={1587--1607},
+  year={2016},
+  month = 1,
+  publisher={Wiley Online Library}
+}
+
+@article{fisher2016including,
+  title={Including sheath effects in the interpretation of planar retarding potential analyzer’s low-energy ion data},
+  author={Fisher, LE and Lynch, KA and Fernandes, PA and Bekkeng, TA and Moen, J and Zettergren, M and Miceli, RJ and Powell, S and Lessard, MR and Horak, P},
+  journal={Review of Scientific Instruments},
+  volume={87},
+  number={4},
+  pages={043504},
+  year={2016},
+  month = 4,
+  publisher={AIP Publishing LLC}
+}
+
+@article{lilensten2016thermospheric,
+  title={The thermospheric auroral red line Angle of Linear Polarization},
+  author={Lilensten, Jean and Barth{\'e}lemy, Mathieu and Besson, G{\'e}rard and Lamy, Herv{\'e} and Johnsen, Magnar G and Moen, J{\o}ran},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={7},
+  pages={7125--7134},
+  year={2016},
+  month = 7,
+  publisher={Wiley Online Library}
+}
+
+@article{wang2016comparison,
+  title={A comparison between large-scale irregularities and scintillations in the polar ionosphere},
+  author={Wang, Y and Zhang, Q-H and Jayachandran, Periyadan T and Lockwood, Mike and Zhang, S-R and Moen, Joran and Xing, Z-Y and Ma, Y-Z and Lester, Mark},
+  journal={Geophysical Research Letters},
+  volume={43},
+  number={10},
+  pages={4790--4798},
+  year={2016},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@article{zhang2016polar,
+  title={Polar cap patch transportation beyond the classic scenario},
+  author={Zhang, Qing-He and Moen, J{\o}ran and Lockwood, Michael and McCrea, Ian and Zhang, Bei-Chen and McWilliams, Kathryn A and Zong, Qiu-Gang and Zhang, Shun-Rong and Ruohoniemi, J Michael and Thomas, Evan G and others},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={9},
+  pages={9063--9074},
+  year={2016},
+  month = 8,
+  publisher={Wiley Online Library}
+}
+
+@article{zhang2016earth,
+  title={Earth's ion upflow associated with polar cap patches: Global and in situ observations},
+  author={Zhang, Qing-He and Zong, Qiu-Gang and Lockwood, Michael and Heelis, Roderick A and Hairston, Marc and Liang, Jun and McCrea, Ian and Zhang, Bei-Chen and Moen, J{\o}ran and Zhang, Shun-Rong and others},
+  journal={Geophysical Research Letters},
+  volume={43},
+  number={5},
+  pages={1845--1853},
+  year={2016},
+  month = 2,
+  publisher={Wiley Online Library}
+}
+
+@article{garcia2016stochastic,
+  title={Stochastic modelling of intermittent fluctuations in the scrape-off layer: Correlations, distributions, level crossings, and moment estimation},
+  author={Garcia, Odd Erik and Kube, Ralph and Theodorsen, Audun and P{\'e}cseli, HL},
+  journal={Physics of Plasmas},
+  volume={23},
+  number={5},
+  pages={052308},
+  year={2016},
+  month = 5,
+  publisher={AIP Publishing LLC}
+}
+
+@article{kono2016parametric,
+  title={Parametric decay of wide band Langmuir wave spectra},
+  author={Kono, Mitsuo and P{\'e}cseli, Hans L},
+  journal={Journal of Plasma Physics},
+  volume={82},
+  number={6},
+  pages={905820606},
+  year={2016},
+  month = 11,
+  publisher={Cambridge University Press}
+}
+
+@article{pecseli2016solvable,
+  title={A solvable blob-model for magnetized plasmas},
+  author={P{\'e}cseli, HL and Sortland, Daniel Selnes and Garcia, Odd Erik},
+  journal={Plasma Physics and Controlled Fusion},
+  volume={58},
+  number={10},
+  pages={104002},
+  year={2016},
+  month = 9,
+  publisher={IOP Publishing}
+}
+
+@article{clausen2016gps,
+  title={GPS scintillations in the high latitudes during periods of dayside and nightside reconnection},
+  author={Clausen, LBN and Moen, JI and Hosokawa, K and Holmes, JM},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={4},
+  pages={3293--3309},
+  year={2016},
+  month = 3,
+  publisher={Wiley Online Library}
+}
+
+@article{cohen2016rocket,
+  title={Rocket-borne measurements of electron temperature and density with the Electron Retarding Potential Analyzer instrument},
+  author={Cohen, IJ and Widholm, M and Lessard, MR and Riley, P and Heavisides, J and Moen, JI and Clausen, LBN and Bekkeng, TA},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={7},
+  pages={6774--6782},
+  year={2016},
+  month = 7,
+  publisher={Wiley Online Library}
+}
+
+@article{coxon2016seasonal,
+  title={Seasonal and diurnal variations in AMPERE observations of the Birkeland currents compared to modeled results},
+  author={Coxon, JC and Milan, SE and Carter, JA and Clausen, LBN and Anderson, BJ and Korth, H},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={5},
+  pages={4027--4040},
+  year={2016},
+  month = 4,
+  publisher={Wiley Online Library}
+}
+
+@article{shukhtina2016magnetotail,
+  title={Magnetotail magnetic flux monitoring based on simultaneous solar wind and magnetotail observations},
+  author={Shukhtina, MA and Gordeev, EI and Sergeev, VA and Tsyganenko, NA and Clausen, LBN and Milan, SE},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={9},
+  pages={8821--8839},
+  year={2016},
+  month = 8,
+  publisher={Wiley Online Library}
+}
+
+@article{smith2016causes,
+  title={The causes of the hardest electron precipitation events seen with SAMPEX},
+  author={Smith, David M and Casavant, Eric P and Comess, Max D and Liang, Xinqing and Bowers, Gregory S and Selesnick, Richard S and Clausen, Lasse BN and Millan, Robyn M and Sample, John G},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={9},
+  pages={8600--8613},
+  year={2016},
+  month = 9,
+  publisher={Wiley Online Library}
+}
+
+@article{van2016scintillation,
+  title={Scintillation and irregularities from the nightside part of a Sun-aligned polar cap arc},
+  author={van der Meeren, Christer and Oksavik, Kjellmar and Lorentzen, Dag A and Paxton, Larry J and Clausen, Lasse BN},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={6},
+  pages={5723--5736},
+  year={2016},
+  month = 6,
+  publisher={Wiley Online Library}
+}
+
+@article{yang2016observations,
+  title={Observations of high-plasma density region in the inner coma of 67P/Churyumov--Gerasimenko during early activity},
+  author={Yang, Lei and Paulsson, JJP and Simon Wedlund, C and Odelstad, Elias and Edberg, Niklas JT and Koenders, C and Eriksson, Anders I and Miloch, WJ},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={462},
+  number={Suppl\_1},
+  pages={S33--S44},
+  year={2016},
+  month = 11,
+  publisher={The Royal Astronomical Society}
+}
+
+@article{spicher2016reverse,
+  title={Reverse flow events and small-scale effects in the cusp ionosphere},
+  author={Spicher, A and Ilyasov, AA and Miloch, WJ and Chernyshov, AA and Clausen, LBN and Moen, JI and Abe, T and Saito, Y},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={10},
+  pages={10--466},
+  year={2016},
+  month = 10,
+  publisher={Wiley Online Library}
+}
+
+@article{jin2016statistical,
+  title={Statistical study of the GNSS phase scintillation associated with two types of auroral blobs},
+  author={Jin, Yaqi and Moen, J{\o}ran I and Miloch, Wojciech J and Clausen, Lasse BN and Oksavik, Kjellmar},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={121},
+  number={5},
+  pages={4679--4697},
+  year={2016},
+  month = 4,
+  publisher={Wiley Online Library}
+}
+
+@article{jin2016auroral,
+  title={The auroral ionosphere TEC response to an interplanetary shock},
+  author={Jin, Yaqi and Zhou, Xiaoyan and Moen, J{\o}ran I and Hairston, Marc},
+  journal={Geophysical Research Letters},
+  volume={43},
+  number={5},
+  pages={1810--1818},
+  year={2016},
+  month = 2,
+  publisher={Wiley Online Library}
+}
+
+@article{edberg2016cme,
+  title={CME impact on comet 67P/Churyumov-Gerasimenko},
+  author={Edberg, Niklas JT and Alho, M and Andr{\'e}, Mats and Andrews, David J and Behar, Etienne and Burch, JL and Carr, CM and Cupido, E and Engelhardt, IAD and Eriksson, Anders I and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={462},
+  number={Suppl\_1},
+  pages={S45--S56},
+  year={2016},
+  month = 8,
+  publisher={The Royal Astronomical Society}
+}
+
+@article{mandt2016rpc,
+  title={RPC observation of the development and evolution of plasma interaction boundaries at 67P/Churyumov-Gerasimenko},
+  author={Mandt, KE and Eriksson, Anders and Edberg, Niklas JT and Koenders, C and Broiles, T and Fuselier, SA and Henri, P and Nemeth, Z and Alho, M and Biver, N and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={462},
+  number={Suppl\_1},
+  pages={S9--S22},
+  year={2016},
+  month = 9,
+  publisher={The Royal Astronomical Society}
+}
+
+@article{hansen2016evolution,
+  title={Evolution of water production of 67P/Churyumov--Gerasimenko: an empirical model and a multi-instrument study},
+  author={Hansen, Kenneth C and Altwegg, Kathrin and Berthelier, J-J and Bieler, Andr{\'e} and Biver, N and Bockel{\'e}e-Morvan, D and Calmonte, U and Capaccioni, FABRIZIO and Combi, MR and De Keyser, J and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={462},
+  number={Suppl\_1},
+  pages={S491--S506},
+  year={2016},
+  month = 9,
+  publisher={Oxford University Press}
+}
+
+@article{wedlund2016atmosphere,
+  title={The atmosphere of comet 67P/Churyumov-Gerasimenko diagnosed by charge-exchanged solar wind alpha particles},
+  author={Wedlund, C Simon and Kallio, Esa and Alho, Markku and Nilsson, Hans and Wieser, G Stenberg and Gunell, Herbert and Behar, Etienne and Pusa, Janne and Gronoff, Guillaume},
+  journal={Astronomy \& Astrophysics},
+  volume={587},
+  pages={A154},
+  year={2016},
+  month = 3,
+  publisher={EDP Sciences}
+}
+
+@article{pecseli2015low,
+  title={Low frequency electrostatic waves propagating in plasmas with parameters varying along magnetic field lines},
+  author={P{\'e}cseli, HL},
+  journal={Plasma Sources Science and Technology},
+  volume={25},
+  number={1},
+  pages={015010},
+  year={2015},
+  month = 12,
+  publisher={IOP Publishing}
+}
+
+@article{miloch2017wake,
+  title={Wake potential of a dust particle in magnetised plasmas},
+  author={Miloch, Wojciech Jacek and Darian, Diako and Mortensen, Mikael},
+  journal={Physica Scripta},
+  volume={92},
+  number={11},
+  pages={114006},
+  year={2017},
+  month = 5,
+  publisher={IOP Publishing}
+}
+
+@article{chen2017dynamic,
+  title={Dynamic properties of throat aurora revealed by simultaneous ground and satellite observations},
+  author={Chen, X-C and Han, D-S and Lorentzen, Dag Arne and Oksavik, Kjellmar and Moen, J{\o}ran Idar and Baddeley, LJ},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={122},
+  number={3},
+  pages={3469--3486},
+  year={2017},
+  month = 2,
+  publisher={Wiley Online Library}
+}
+
+@article{milan2017overview,
+  title={Overview of solar wind--magnetosphere--ionosphere--atmosphere coupling and the generation of magnetospheric currents},
+  author={Milan, Stephen Eric and Clausen, Lasse Boy Novock and Coxon, John Charles and Carter, Jenny A and Walach, M-T and Laundal, K and {\O}stgaard, Nikolai and Tenfjord, P and Reistad, J and Snekvik, Kristian and others},
+  journal={Space Science Reviews},
+  volume={206},
+  pages={547--573},
+  year={2017},
+  month = 2,
+  publisher={Springer}
+}
+
+@article{zhou2017shock,
+  title={Shock aurora: Field-aligned discrete structures moving along the dawnside oval},
+  author={Zhou, Xiaoyan and Haerendel, Gerhard and Moen, J{\o}ran I and Trondsen, Espen and Clausen, Lasse and Strangeway, Robert J and Lybekk, Bj{\o}rn and Lorentzen, Dag A},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={122},
+  number={3},
+  pages={3145--3162},
+  year={2017},
+  month = 2,
+  publisher={Wiley Online Library}
+}
+
+@article{stenberg2017investigating,
+  title={Investigating short-time-scale variations in cometary ions around comet 67P},
+  author={Stenberg Wieser, Gabriella and Odelstad, Elias and Wieser, Martin and Nilsson, Hans and Goetz, Charlotte and Karlsson, Tomas and Andr{\'e}, Mats and Kalla, Leif and Eriksson, Anders I and Nicolaou, Georgios and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={469},
+  number={Suppl\_2},
+  pages={S522--S534},
+  year={2017},
+  month = 8,
+  publisher={Oxford University Press}
+}
+
+@article{nilsson2017evolution,
+  title={Evolution of the ion environment of comet 67P during the Rosetta mission as seen by RPC-ICA},
+  author={Nilsson, Hans and Wieser, Gabriella Stenberg and Behar, Etienne and Gunell, Herbert and Wieser, Martin and Galand, Marina and Simon Wedlund, Cyril and Alho, Markku and Goetz, Charlotte and Yamauchi, Masatoshi and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={469},
+  number={Suppl\_2},
+  pages={S252--S261},
+  year={2017},
+  month = 6,
+  publisher={Oxford University Press}
+}
+
+@article{gunell2017plasma,
+  title={Plasma waves confined to the diamagnetic cavity of comet 67P/Churyumov--Gerasimenko},
+  author={Gunell, Herbert and Goetz, C and Eriksson, Anders and Nilsson, Hans and Simon Wedlund, Cyril and Henri, Pierre and Maggiolo, Romain and Hamrin, Maria and De Keyser, Johan and Rubin, Martin and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={469},
+  number={Suppl\_2},
+  pages={S84--S92},
+  year={2017},
+  month = 5,
+  publisher={Oxford University Press}
+}
+
+@article{johansson2017rosetta,
+  title={Rosetta photoelectron emission and solar ultraviolet flux at comet 67P},
+  author={Johansson, Fredrik L and Odelstad, Elias and Paulsson, JJP and Harang, SS and Eriksson, Anders I and Mannel, T and Vigren, Erik and Edberg, Niklas JT and Miloch, WJ and Simon Wedlund, C and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={469},
+  number={Suppl\_2},
+  pages={S626--S635},
+  year={2017},
+  month = 9,
+  publisher={Oxford University Press}
+}
+
+@article{hoang2017high,
+  title={High-spatial-resolution electron density measurement by Langmuir probe for multi-point observations using tiny spacecraft},
+  author={Hoang, H and R{\o}ed, K and Bekkeng, TA and Trondsen, E and Clausen, LBN and Miloch, WJ and Moen, JI},
+  journal={Measurement Science and Technology},
+  volume={28},
+  number={11},
+  pages={115903},
+  year={2017},
+  month = 10,
+  publisher={IOP Publishing}
+}
+
+@article{jin2017gps,
+  title={GPS scintillations associated with cusp dynamics and polar cap patches},
+  author={Jin, Yaqi and Moen, J{\o}ran I and Oksavik, Kjellmar and Spicher, Andres and Clausen, Lasse BN and Miloch, Wojciech J},
+  journal={Journal of Space Weather and Space Climate},
+  volume={7},
+  pages={A23},
+  year={2017},
+  month = 8,
+  publisher={EDP Sciences}
+}
+
+@article{darian2017numerical,
+  title={Numerical simulations of a sounding rocket in ionospheric plasma: Effects of magnetic field on the wake formation and rocket potential},
+  author={Darian, Diako and Marholm, Sigvald and Paulsson, Joakim John Paul and Miyake, Y and Usui, H and Mortensen, Mikael and Miloch, Wojciech Jacek},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={122},
+  number={9},
+  pages={9603--9621},
+  year={2017},
+  month = 8,
+  publisher={Wiley Online Library}
+}
+
+@article{spicher2017interhemispheric,
+  title={Interhemispheric study of polar cap patch occurrence based on Swarm in situ data},
+  author={Spicher, Andres and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Lofstad, Victoria and Jin, Yaqi and Moen, J{\o}ran Idar},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={122},
+  number={3},
+  pages={3837--3851},
+  year={2017},
+  month = 3,
+  publisher={Wiley Online Library}
+}
+
+@article{horky2017numerical,
+  title={Numerical heating of electrons in particle-in-cell simulations of fully magnetized plasmas},
+  author={Hork{\`y}, Miroslav and Miloch, Wojciech Jacek and Delong, Vojt{\v{e}}ch Adalbert},
+  journal={Physical Review E},
+  volume={95},
+  number={4},
+  pages={043302},
+  year={2017},
+  month = 4,
+  publisher={APS}
+}
+
+@article{eriksson2017cold,
+  title={Cold and warm electrons at comet 67P/Churyumov-Gerasimenko},
+  author={Eriksson, Anders I and Engelhardt, Ilka AD and Andr{\'e}, Mats and Bostr{\"o}m, Rolf and Edberg, Niklas JT and Johansson, Fredrik L and Odelstad, Elias and Vigren, Erik and Wahlund, J-E and Henri, P and others},
+  journal={Astronomy \& Astrophysics},
+  volume={605},
+  pages={A15},
+  year={2017},
+  month = 9,
+  publisher={EDP Sciences}
+}
+
+@article{wedlund2017hybrid,
+  title={Hybrid modelling of cometary plasma environments-I. Impact of photoionisation, charge exchange, and electron ionisation on bow shock and cometopause at 67P/Churyumov-Gerasimenko},
+  author={Wedlund, C Simon and Alho, Markku and Gronoff, Guillaume and Kallio, Esa and Gunell, Herbert and Nilsson, Hans and Lindkvist, Jesper and Behar, Etienne and Wieser, G Stenberg and Miloch, Wojciech Jacek},
+  journal={Astronomy \& Astrophysics},
+  volume={604},
+  pages={A73},
+  year={2017},
+  month = 8,
+  publisher={EDP Sciences}
+}
+
+@article{gunell2017ion,
+  title={Ion acoustic waves at comet 67P/Churyumov-Gerasimenko-Observations and computations},
+  author={Gunell, H and Nilsson, Hans and Hamrin, Maria and Eriksson, Anders and Odelstad, Elias and Maggiolo, Romain and Henri, Pierre and Vallieres, Xavier and Altwegg, Kathrin and Tzou, C-Y and others},
+  journal={Astronomy \& Astrophysics},
+  volume={600},
+  pages={A3},
+  year={2017},
+  month = 1,
+  publisher={EDP Sciences}
+}
+
+
 @article{sinevich2022small,
   title={Small-Scale Irregularities Within Polarization Jet/SAID During Geomagnetic Activity},
   author={Sinevich, AA and Chernyshov, AA and Chugunin, DV and Oinats, AV and Clausen, LBN and Miloch, WJ and Nishitani, N and Mogilevsky, MM},
@@ -468,3 +966,4 @@
   month = 1,
   publisher={Wiley Online Library}
 }
+
