--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -15,3 +15,14 @@
   month = 9,
 }
 
+@inproceedings{garcia2015magnetic,
+  title={Magnetic field-aligned plasma currents in gravitational fields},
+  author={Garcia, Odd Erik and Leer, Egil and P{\'e}cseli, HL and Trulsen, Jan Karsten},
+  booktitle={Annales Geophysicae},
+  volume={33},
+  number={3},
+  pages={257--266},
+  year={2015},
+  month = 3,
+  organization={Copernicus GmbH G{\"o}ttingen, Germany}
+}
