--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,3 +1,49 @@
+@article{mortensen2015oasis,
+  title={Oasis: a high-level/high-performance open source Navier--Stokes solver},
+  author={Mortensen, Mikael and Valen-Sendstad, Kristian},
+  journal={Computer physics communications},
+  volume={188},
+  pages={177--188},
+  year={2015},
+  month = 11,
+  publisher={Elsevier}
+}
+@article{oksavik2015scintillation,
+  title={Scintillation and loss of signal lock from poleward moving auroral forms in the cusp ionosphere},
+  author={Oksavik, Kjellmar and van der Meeren, Christer and Lorentzen, Dag Arne and Baddeley, LJ and Moen, J},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={10},
+  pages={9161--9175},
+  year={2015},
+  month = 10,
+  publisher={Wiley Online Library}
+}
+
+@article{lynch2015mica,
+  title={MICA sounding rocket observations of conductivity-gradient-generated auroral ionospheric responses: Small-scale structure with large-scale drivers},
+  author={Lynch, KA and Hampton, DL and Zettergren, M and Bekkeng, TA and Conde, M and Fernandes, PA and Horak, P and Lessard, M and Miceli, R and Michell, R and others},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={11},
+  pages={9661--9682},
+  year={2015},
+  month = 10,
+  publisher={Wiley Online Library}
+}
+@article{chen2015simultaneous,
+  title={Simultaneous ground-based optical and HF radar observations of the ionospheric footprint of the open/closed field line boundary along the geomagnetic meridian},
+  author={Chen, X-C and Lorentzen, DA and Moen, JI and Oksavik, K and Baddeley, LJ},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={11},
+  pages={9859--9874},
+  year={2015},
+  month = 11,
+  publisher={Wiley Online Library}
+}
+
+
 @article{mortensen2016high,
   title={High performance Python for direct numerical simulations of turbulent flows},
   author={Mortensen, Mikael and Langtangen, Hans Petter},
@@ -494,7 +540,6 @@
   month = 1,
   publisher={EDP Sciences}
 }
-
 
 @article{sinevich2022small,
   title={Small-Scale Irregularities Within Polarization Jet/SAID During Geomagnetic Activity},
