--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -26,3 +26,28 @@
   month = 3,
   organization={Copernicus GmbH G{\"o}ttingen, Germany}
 }
+
+@inproceedings{pecseli2015spectral,
+  title={Spectral properties of electrostatic drift wave turbulence in the laboratory and the ionosphere},
+  author={P{\'e}cseli, HL},
+  booktitle={Annales Geophysicae},
+  volume={33},
+  number={7},
+  pages={875--900},
+  year={2015},
+  month = 7,
+  organization={Copernicus GmbH G{\"o}ttingen, Germany}
+}
+
+@inproceedings{sandholt2015transitions,
+  title={Transitions between states of magnetotail--ionosphere coupling and the role of solar wind dynamic pressure: the 25 July 2004 interplanetary CME case},
+  author={Sandholt, PE and Farrugia, Charlie J and Denig, WF},
+  booktitle={Annales Geophysicae},
+  volume={33},
+  number={4},
+  pages={427--436},
+  year={2015},
+  month = 4,
+  organization={Copernicus GmbH G{\"o}ttingen, Germany}
+}
+
