--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -43,6 +43,101 @@
   publisher={Wiley Online Library}
 }
 
+@article{zhang2015direct,
+  title={Direct observations of the full Dungey convection cycle in the polar ionosphere for southward interplanetary magnetic field conditions},
+  author={Zhang, Q-H and Lockwood, Mike and Foster, JC and Zhang, S-R and Zhang, B-C and McCrea, IW and Moen, J and Lester, M and Ruohoniemi, J Michael},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={6},
+  pages={4519--4530},
+  year={2015},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@article{lilensten2015auroral,
+  title={The auroral red line polarisation: modelling and measurements},
+  author={Lilensten, Jean and Bommier, V{\'e}ronique and Barth{\'e}lemy, Mathieu and Lamy, Herv{\'e} and Bernard, David and Moen, Joran Idar and Johnsen, Magnar Gullikstad and L{\o}vhaug, Unni Pia and Pitout, Fr{\'e}d{\'e}ric},
+  journal={Journal of Space Weather and Space Climate},
+  volume={5},
+  pages={A26},
+  year={2015},
+  month = 8,
+  publisher={EDP Sciences}
+}
+
+@article{moen2015symmetry,
+  title={On the symmetry of ionospheric polar cap patch exits around magnetic midnight},
+  author={Moen, J and Hosokawa, Keisuke and Gulbrandsen, Nj{\aa}l and Clausen, Lasse Boy Novock},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={9},
+  pages={7785--7797},
+  year={2015},
+  month = 7,
+  publisher={Wiley Online Library}
+}
+
+@article{spicher2015plasma,
+  title={Plasma turbulence and coherent structures in the polar cap observed by the ICI-2 sounding rocket},
+  author={Spicher, A and Miloch, WJ and Clausen, LBN and Moen, JI},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={12},
+  pages={10--959},
+  year={2015},
+  month = 12,
+  publisher={Wiley Online Library}
+}
+
+@article{jin2015collocation,
+  title={On the collocation of the cusp aurora and the GPS phase scintillation: A statistical study},
+  author={Jin, Yaqi and Moen, J{\o}ran I and Miloch, Wojciech J},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={10},
+  pages={9176--9191},
+  year={2015},
+  month = 10,
+  publisher={Wiley Online Library}
+}
+
+@article{bergsaker2015models,
+  title={Models for the probability densities of the turbulent plasma flux in magnetized plasmas},
+  author={Bergsaker, AS and Fredriksen, {\AA} and P{\'e}cseli, HL and Trulsen, JK},
+  journal={Physica Scripta},
+  volume={90},
+  number={10},
+  pages={108005},
+  year={2015},
+  month = 9,
+  publisher={IOP Publishing}
+}
+
+@article{clausen2015electron,
+  title={Electron density enhancements in the polar cap during periods of dayside reconnection},
+  author={Clausen, Lasse Boy Novock and Moen, JI},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={120},
+  number={6},
+  pages={4452--4464},
+  year={2015},
+  month = 5,
+  publisher={Wiley Online Library}
+}
+
+@article{tresvig2015miniaturized,
+  title={A miniaturized subpayload system used for measurements in the ionosphere-A design concept},
+  author={Tresvig, Johan Ludvig and Lindem, Torfnn},
+  journal={IEEE Aerospace and Electronic Systems Magazine},
+  volume={30},
+  number={4},
+  pages={24--28},
+  year={2015},
+  month = 4,
+  publisher={IEEE}
+}
+
 
 @article{mortensen2016high,
   title={High performance Python for direct numerical simulations of turbulent flows},
